<resources>
    <string name="app_name">CleanCity</string>
    <string name="helpTxt">Ayuda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>
    <string name="fecha">Fecha</string>
    <string name="descripcion">Descripcion</string>
    <string name="sector">Sector</string>
    <string name="tipo">Tipo</string>
    <string name="direccion">Direccion</string>
    <string name="solicitudes">Solicitudes</string>
    <string name="rutaCahureo">Ruta del Cahureo</string>
</resources>