<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SolicitudActivity"
    android:background="#C6C6C6">

    <include
        android:id="@+id/include"
        layout="@layout/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginTop="14dp"
        android:fontFamily="arial"
        android:text="@string/nombre"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/nombreTV"
        android:layout_width="290dp"
        android:layout_height="20dp"
        android:layout_marginTop="14dp"
        android:fontFamily="arial"
        android:text=""
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:fontFamily="arial"
        android:text="@string/telefono"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/phoneTV"
        android:layout_width="290dp"
        android:layout_height="20dp"
        android:fontFamily="arial"
        android:text=""
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreTV"
        app:layout_constraintVertical_bias="0.021" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:fontFamily="arial"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.019" />

    <TextView
        android:id="@+id/emailTV"
        android:layout_width="290dp"
        android:layout_height="20dp"
        android:fontFamily="arial"
        android:text=""
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneTV"
        app:layout_constraintVertical_bias="0.021" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:fontFamily="arial"
        android:text="@string/fecha"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/fechaTV"
        android:layout_width="290dp"
        android:layout_height="20dp"
        android:fontFamily="arial"
        android:text=""
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTV"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:fontFamily="arial"
        android:text="@string/descripcion"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.032" />

    <TextView
        android:id="@+id/descTV"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:gravity="start|top"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="arial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.025"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:fontFamily="arial"
        android:text="@string/sector"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descTV"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/sectorTV"
        android:layout_width="290dp"
        android:layout_height="20dp"
        android:fontFamily="arial"
        android:text=""
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/descTV"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:fontFamily="arial"
        android:text="@string/tipo"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        app:layout_constraintVertical_bias="0.038" />

    <TextView
        android:id="@+id/tipoTV"
        android:layout_width="290dp"
        android:layout_height="20dp"
        android:fontFamily="arial"
        android:text=""
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/sectorTV"
        app:layout_constraintVertical_bias="0.038" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:fontFamily="arial"
        android:text="@string/direccion"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        app:layout_constraintVertical_bias="0.049" />

    <TextView
        android:id="@+id/direcTV"
        android:layout_width="290dp"
        android:layout_height="20dp"
        android:fontFamily="arial"
        android:text=""
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/tipoTV"
        app:layout_constraintVertical_bias="0.049" />


</androidx.constraintlayout.widget.ConstraintLayout>